--- a/simulation_ws/src/scrubber_gazebo/CMakeLists.txt
+++ b/simulation_ws/src/scrubber_gazebo/CMakeLists.txt
@@ -8,7 +8,8 @@ project(scrubber_gazebo)
 ## if COMPONENTS list like find_package(catkin REQUIRED COMPONENTS xyz)
 ## is used, also find other catkin packages
 find_package(catkin REQUIRED
-            roscpp)
+            roscpp
+	    gazebo_ros)
 
 ## System dependencies are found with CMake's conventions
 # find_package(Boost REQUIRED COMPONENTS system)
@@ -104,7 +105,7 @@ catkin_package(
 #  LIBRARIES scrubber_gazebo
 #  CATKIN_DEPENDS other_catkin_pkg
 #  DEPENDS system_lib
-#  DEPENDS gazebo_ros
+  DEPENDS gazebo_ros
 )
 
 ###########
