--- a/simulation_ws/src/CleaningCar/package.xml
+++ b/simulation_ws/src/CleaningCar/package.xml
@@ -10,6 +10,7 @@ for ClearningCar robot</p>
   <maintainer email="TODO@email.com" />
   <license>BSD</license>
   <buildtool_depend>catkin</buildtool_depend>
+  <build_depend>gazebo_ros</build_depend>
   <build_depend>roslaunch</build_depend>
   <run_depend>robot_state_publisher</run_depend>
   <run_depend>rviz</run_depend>
