--- a/simulation_ws/src/launcher/launcher_state_machine/CMakeLists.txt
+++ b/simulation_ws/src/launcher/launcher_state_machine/CMakeLists.txt
@@ -15,8 +15,6 @@ find_package(catkin REQUIRED COMPONENTS
              amcl
              tf2
              tf2_ros
-	     dwa_local_planner
-	     teb_local_planner
              )
 
 catkin_package(
@@ -36,6 +34,8 @@ catkin_package(
 		#  DEPENDS system_lib
 )
 
+find_library(dwa_local_planner_LIB dwa_local_planner)
+find_library(teb_local_planner_LIB teb_local_planner)
 ###########
 ## Build ##
 ###########
