--- a/simulation_ws/src/scrubber/scrubber/CMakeLists.txt
+++ b/simulation_ws/src/scrubber/scrubber/CMakeLists.txt
@@ -15,7 +15,6 @@ find_package(catkin REQUIRED COMPONENTS
              tf2
              tf2_ros
              amcl
-	     path_coverage
              )
 
 ## System dependencies are found with CMake's conventions
@@ -173,8 +172,7 @@ target_link_libraries(Scrubber
                       scrubber_util
                       Mechanism
                       ${Boost_LIBRARIES}
-                      ${catkin_LIBRARIES}
-		      ${path_coverage_LIB})
+                      ${catkin_LIBRARIES})
 ## Add cmake target dependencies of the library
 ## as an example, code may need to be generated before libraries
 ## either from message generation or dynamic reconfigure
