--- a/simulation_ws/src/scrubber/scrubber/CMakeLists.txt
+++ b/simulation_ws/src/scrubber/scrubber/CMakeLists.txt
@@ -119,6 +119,7 @@ catkin_package(
 		#  DEPENDS system_lib
 )
 
+find_libraray(path_coverage_LIB path_coverage)
 ###########
 ## Build ##
 ###########
@@ -157,7 +158,8 @@ add_dependencies(Mechanism
 
 target_link_libraries(Mechanism
                       ${Boost_LIBRARIES}
-                      ${catkin_LIBRARIES})
+                      ${catkin_LIBRARIES}
+		      ${path_coverage_LIB})
 
 add_library(Scrubber
             src/Scrubber.cpp
@@ -171,7 +173,8 @@ target_link_libraries(Scrubber
                       scrubber_util
                       Mechanism
                       ${Boost_LIBRARIES}
-                      ${catkin_LIBRARIES})
+                      ${catkin_LIBRARIES}
+		      ${path_coverage_LIB})
 ## Add cmake target dependencies of the library
 ## as an example, code may need to be generated before libraries
 ## either from message generation or dynamic reconfigure
