--- a/simulation_ws/src/launcher/launcher_state_machine/CMakeLists.txt
+++ b/simulation_ws/src/launcher/launcher_state_machine/CMakeLists.txt
@@ -144,4 +144,9 @@ install(DIRECTORY include/${PROJECT_NAME}/
         DESTINATION ${CATKIN_PACKAGE_INCLUDE_DESTINATION}
         FILES_MATCHING PATTERN "*.h"
         )
-
+	
+install(DIRECTORY 
+        launch
+	param
+    DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION}
+       )
