--- a/simulation_ws/src/database/database/CMakeLists.txt
+++ b/simulation_ws/src/database/database/CMakeLists.txt
@@ -63,6 +63,7 @@ target_link_libraries(scrubber_database DatabaseHelper)
 
 ## Mark executables and/or libraries for installation
 install(TARGETS
+        DatabaseHelper
         scrubber_database
         ARCHIVE DESTINATION ${CATKIN_PACKAGE_LIB_DESTINATION}
 	LIBRARY DESTINATION ${CATKIN_PACKAGE_LIB_DESTINATION}
