--- a/simulation_ws/src/scrubber/scrubber/CMakeLists.txt
+++ b/simulation_ws/src/scrubber/scrubber/CMakeLists.txt
@@ -219,6 +219,9 @@ target_link_libraries(scrubber_node Scrubber)
 
 ## Mark executables and/or libraries for installation
 install(TARGETS
+        scrubber_util
+	Mechanism
+	Scrubber
         scrubber_node
         ARCHIVE DESTINATION ${CATKIN_PACKAGE_LIB_DESTINATION}
         LIBRARY DESTINATION ${CATKIN_PACKAGE_LIB_DESTINATION}
