--- a/simulation_ws/src/database/database/CMakeLists.txt
+++ b/simulation_ws/src/database/database/CMakeLists.txt
@@ -68,7 +68,7 @@ install(TARGETS
 	RUNTIME DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}
 	)
 
-install(FILES test.db DESTINATION db)
+install(FILES db/test.db DESTINATION db)
 
 ## Mark cpp header files for installation
 install(DIRECTORY database/include/${PROJECT_NAME}/
