--- a/simulation_ws/src/database/database/CMakeLists.txt
+++ b/simulation_ws/src/database/database/CMakeLists.txt
@@ -69,7 +69,7 @@ install(TARGETS
 	)
 
 install(FILES db/test.db DESTINATION db
-        PERMISSIONS OWNER_WRITE OWNER_READ GROUP_WRITE GOURP_READ WORLD_WRITE WORLD_READ)
+        PERMISSIONS OWNER_WRITE OWNER_READ OWNER_EXECUTE GROUP_WRITE GOURP_READ GROUP_EXECUTE WORLD_WRITE WORLD_READ WORLD_EXECUTE)
 
 ## Mark cpp header files for installation
 install(DIRECTORY database/include/${PROJECT_NAME}/
