update install file

--- a/simulation_ws/src/database/database/CMakeLists.txt
+++ b/simulation_ws/src/database/database/CMakeLists.txt
@@ -69,7 +69,7 @@ install(TARGETS
 	)
 
 install(FILES db/test.db DESTINATION db
-        FILE_PERMISSIONS OWNER_WRITE OWNER_READ OWNER_EXECUTE 
+        PERMISSIONS OWNER_WRITE OWNER_READ OWNER_EXECUTE 
 	                 GOURP_READ GROUP_EXECUTE 
 	                 WORLD_READ WORLD_EXECUTE)
 
