--- a/simulation_ws/src/database/database/CMakeLists.txt
+++ b/simulation_ws/src/database/database/CMakeLists.txt
@@ -68,9 +68,9 @@ install(TARGETS
 	RUNTIME DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}
 	)
 
-install(FILES db/test.db DESTINATION db
-        PERMISSIONS OWNER_WRITE OWNER_READ OWNER_EXECUTE 
-	            GROUP_EXECUTE GROUP_READ)
+install(FILES db/test.db 
+        DESTINATION db
+        PERMISSIONS OWNER_WRITE OWNER_READ OWNER_EXECUTE GROUP_EXECUTE GROUP_READ)
 
 ## Mark cpp header files for installation
 install(DIRECTORY database/include/${PROJECT_NAME}/
